<resources>
    <string name="app_name">Volume Booster</string>
    <string name="mute">Mute</string>
    <string name="v_30_percent">30%</string>
    <string name="v_60_percent">60%</string>
    <string name="v_100_percent">100%</string>
    <string name="v_125_percent">125%</string>
    <string name="v_150_percent">150%</string>
    <string name="v_175_percent">175%</string>
    <string name="max_bosster">Max</string>
    <string name="txt_min">-</string>
    <string name="txt_max">+</string>
    <string name="normal">Normal</string>
    <string name="_60hz">60Hz</string>
    <string name="_230hz">230Hz</string>
    <string name="_910hz">910Hz</string>
    <string name="_3khz">3kHz</string>
    <string name="_14khz">14kHz</string>
    <string name="bass_sound">Bass Sound</string>
    <string name="virtualization">Virtualization</string>
    <string name="vintage">Vintage</string>
    <string name="dance">Dance</string>
    <string name="hiphop">Hiphop</string>
    <string name="jazz">Jazz</string>
    <string name="pop">Pop</string>
    <string name="r_and_B"><![CDATA[R&B]]></string>
    <string name="latin">Latin</string>
    <string name="piano">Piano</string>
    <string name="edm">EDM</string>
    <string name="room">Room</string>
    <string name="piono">Piano</string>
    <string name="custom">Custom</string>
    <string name="can_not_save">Not-custom preset cannot be saved</string>
    <string name="save_custom_preset">Save Custom Preset</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="preset_name">Preset Name</string>
    <string name="saved">Saved</string>
    <string name="deleted">Deleted</string>
    <string name="rename">Rename</string>
    <string name="edited">Edited</string>
    <string name="exists_already">Exists already</string>
    <string name="unknown">Unknown</string>
    <string name="volume_booster">Volume Booster</string>
    <string name="action_pause">ACTION_PAUSE</string>
    <string name="action_play">ACTION_PLAY</string>
    <string name="action_close">ACTION_CLOSE</string>
    <string name="action_back">ACTION_BACK</string>
    <string name="action_next">ACTION_NEXT</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="maximum_sound_enhancement">Maximum sound enhancement</string>
    <string name="vibration_setting">Vibration Setting</string>
    <string name="more_our_apps">More our apps</string>
    <string name="volume_extra_boost">VOLUME EXTRA BOOST</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_delete">Do you want delete ?</string>
    <string name="thank_for_rate">Thank you for rate</string>
    <string name="no_songs_found">No songs found</string>
    <string name="cant_play_song">"Can not play this song"</string>
    <string name="please_allow_permission">Please allow permission</string>
    <string name="unsupported_device">Unsupported device</string>
    <string name="premium">Upgrade to Premium</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="ads_are_annoying">Ads are annoying?</string>
    <string name="remove_ads_and_enjoy_ads_free_experience">Remove ads and enjoy ads-free</string>
    <string name="experience">experience.</string>
    <string name="value_month_default">150.000</string>
    <string name="value_month_sale">90.000đ</string>
    <string name="monthly">Monthly</string>
    <string name="value_life_time_default">1.000.000</string>
    <string name="value_life_time_sale">678.000đ</string>
    <string name="life_time">Lifetime</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="year">year</string>
    <string name="years">years</string>
    <string name="booster_enable">Volume Booster Enable</string>
    <string name="boost_now"><u>Boost now</u></string>
    <string name="action_booster_now">ACTION_BOOSTER_NOW</string>
    <string name="action_expand">ACTION_EXPAND</string>
    <string name="action_unexpand">ACTION_UNEXPAND</string>
</resources>