<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_dialog_equalizer"
        android:padding="@dimen/_10sdp">

        <me.grantland.widget.AutofitTextView
            android:id="@+id/txt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:fontFamily="@font/monda_bold"
            android:maxLines="2"
            android:text="@string/do_you_want_delete"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:minTextSize="@dimen/_12sdp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_content">

            <TextView
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:fontFamily="@font/monda_bold"
                android:gravity="center"
                android:padding="@dimen/_6sdp"
                android:text="@string/no"
                android:textAllCaps="true"
                android:textColor="@color/color_8E8E8E"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:fontFamily="@font/monda_bold"
                android:padding="@dimen/_6sdp"
                android:text="@string/yes"
                android:textAllCaps="true"
                android:textColor="@color/color_FF9500"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/btn_no"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>