<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_notify"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="@dimen/_15sdp"
    android:paddingTop="@dimen/_10sdp"
    android:paddingEnd="@dimen/_10sdp"
    android:paddingBottom="@dimen/_10sdp">

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="13dp">

        <ImageView
            android:id="@+id/ic_notify"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:paddingStart="@dimen/_2sdp"
            android:paddingTop="@dimen/_2sdp"
            android:paddingEnd="@dimen/_2sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_icon_notify_display" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/ic_close"
            android:layout_toEndOf="@+id/ic_notify"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/monda_regular"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_1sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_1sdp"
                android:text="@string/volume_booster"
                android:textColor="@color/color_949392"
                android:textSize="@dimen/_11sdp" />


            <TextView
                android:id="@+id/txt_boost_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/name_notify"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingTop="@dimen/_1sdp"
                android:text="@string/boost_now"
                android:textColor="@color/color_0094FF"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/txt_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_toEndOf="@+id/txt_boost_now"
                android:fontFamily="@font/monda_bold"
                android:gravity="center"
                android:padding="@dimen/_3sdp"
                android:text="@string/v_100_percent"
                android:textColor="@color/color_181818"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/ic_close"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_close_notify" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_control_music_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/name_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/layout_action"
            android:ellipsize="end"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/monda_bold"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingEnd="@dimen/_15sdp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="I See You"
            android:textColor="@color/color_181818"
            android:textSize="@dimen/_13sdp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/author_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_song"
            android:layout_marginTop="-3dp"
            android:layout_toStartOf="@+id/layout_action"
            android:ellipsize="end"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/monda_regular"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingEnd="@dimen/_15sdp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="Authur"
            android:textColor="@color/color_949392"
            android:textSize="@dimen/_11sdp" />

        <LinearLayout
            android:id="@+id/layout_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_5sdp">

            <ImageView
                android:id="@+id/ic_back_notify"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_back_notify" />

            <ImageView
                android:id="@+id/ic_play_pause"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_play_notify" />

            <ImageView
                android:id="@+id/ic_next_notify"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_next_notify" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>